--- a/docs/styles/jsonlight.css
+++ b/docs/styles/jsonlight.css
@@ -46,6 +46,10 @@ body.bulk-mode-enabled .bulk-checkbox-wrapper {
     cursor: pointer;
 }
 
+.btn-text-small {
+    font-size: 0.8rem;
+}
+
 .btn-icon {
     font-size: 1rem;
     line-height: 1.2;
