--- a/docs/styles/jsonlight.css
+++ b/docs/styles/jsonlight.css
@@ -15,9 +15,15 @@ main {
     overflow-y: hidden;
 }
 
+#view {
+    font-size: 0.9rem;
+}
+
 .sidebar {
     width: 240px;
-    /* align-self: stretch; */
+    max-height: 100vh;
+    overflow-y: auto;
+    font-size: 0.9rem;
 }
 
 .kv-button-group {
